--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -4,6 +4,8 @@
   font-size: 20px;
   color: azure;
   margin: 10px;
+  padding: 10px;
+  border-radius: 8px;
 }
 
 .orange {
@@ -12,6 +14,18 @@
   font-size: 20px;
   color: azure;
   margin: 10px;
+  padding: 10px;
+  border-radius: 8px;
+}
+
+.purple {
+  border-style: none;
+  background-color: rgb(143, 26, 182);
+  font-size: 20px;
+  color: azure;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 8px;
 }
 
 .green {
@@ -20,4 +34,6 @@
   font-size: 20px;
   color: azure;
   margin: 10px;
+  padding: 10px;
+  border-radius: 8px;
 }
