--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -37,3 +37,13 @@
   padding: 10px;
   border-radius: 8px;
 }
+
+.red {
+  border-style: none;
+  background-color: rgb(182, 26, 26);
+  font-size: 20px;
+  color: azure;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 8px;
+}
