--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -6,10 +6,15 @@
   align-items: center;
 }
 
+.header-buttons-container{
+  display: flex;
+}
+
 .logo {
   width: 200px;
 }
 
 h1 {
   text-align: center;
+  font-family: 'Mulish', sans-serif;
 }
