--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,12 +1,21 @@
 .header-container {
-  height: 100vh;
+  background-color: var(--light-pink);
+  text-align: center;
   display: flex;
+  justify-content: center;
+}
+
+.header-content {
+  max-width: 1200px;
+  padding-inline: 30px;
+  height: 100vh;
   flex-direction: column;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.header-buttons-container{
+.header-buttons-container {
   display: flex;
 }
 
@@ -15,6 +24,34 @@
 }
 
 h1 {
-  text-align: center;
-  font-family: 'Mulish', sans-serif;
+  margin-bottom: 30px;
+  font-size: 2.5rem;
+  font-weight: 700;
+  color: var(--dark-purple);
+  font-family: "Mulish", sans-serif;
+}
+
+p {
+  margin-bottom: 30px;
+  font-family: "work-sans", sans-serif;
+  font-size: 1.2rem;
+}
+
+button {
+  width: 190px;
+  color: white;
+  border-style: none;
+  font-size: 20px;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.dark-purple {
+  background-color: var(--dark-purple);
+}
+
+.dark-pink {
+  background-color: var(--dark-pink);
 }
