added api features after delete

--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -1,4 +1,4 @@
-.blue {
+/* .blue {
   border-style: none;
   background-color: rgb(71, 71, 250);
   font-size: 20px;
@@ -46,4 +46,4 @@
   margin: 10px;
   padding: 10px;
   border-radius: 8px;
-}
+} */
