--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@ body {
 :root {
   --dark-pink: #ee826c;
   --light-pink: #FCE3CF;
-  --dark-purple: #302B70;
-  --light-purple: #EDF1F9;
+  --dark-blue: #302B70;
+  --light-blue: #EDF1F9;
 
 }
