--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -24,3 +24,25 @@
 .nav-list a {
   text-decoration: none;
 }
+
+@media (max-width: 800px) {
+  .navigation-container {
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+    padding-bottom: 20px;
+  }
+  .nav-logo-container {
+    align-self: flex-start;
+  }
+  
+  .nav-list {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+
+  .nav-list a {
+    margin-right: 0;
+  }
+}
