--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -1,6 +1,6 @@
 .navigation-container {
   position: fixed;
-  height: 50px;
+  height: 80px;
   width: 100%;
   display: flex;
   align-items: center;
@@ -9,6 +9,14 @@
 
 .nav-logo {
   width: 100px;
+}
+
+.nav-logo-container {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .nav-list {
@@ -25,24 +33,38 @@
   text-decoration: none;
 }
 
+.hamburger {
+  width: 50px;
+  height: 50px;
+  background-color: aqua;
+  display: none;
+}
+
 @media (max-width: 800px) {
   .navigation-container {
     flex-direction: column;
     width: 100%;
     height: auto;
-    padding-bottom: 20px;
   }
-  .nav-logo-container {
-    align-self: flex-start;
-  }
-  
+
   .nav-list {
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
+    display: none;
   }
 
   .nav-list a {
     margin-right: 0;
+  }
+
+  .open {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 30px;
+  }
+
+  .hamburger {
+    display: block;
+    margin-right: 20px;
   }
 }
