--- a/src/pages/form/FormStart.css
+++ b/src/pages/form/FormStart.css
@@ -1,14 +1,14 @@
-.container {
-  width: 100%;
-  height: 10%;
-}
-
 .survey-intro__container {
-  margin: 5% 10% 16% 10%;
+  margin: 4% 8% 0% 8%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: ;
+  background-color: #fdfbf9;
+  padding-right: 12px;
+  padding-left: 12px;
+  padding-top: 36px;
+  padding-bottom: 36px;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
 
 .survey-intro__title {
