--- a/src/pages/form/FormStart.css
+++ b/src/pages/form/FormStart.css
@@ -17,20 +17,11 @@
   padding-bottom: 8%;
 }
 
-.survey-intro__title {
-  margin-bottom: 8vh;
-  color: var(--dark-blue);
-}
-
 .survey-intro__body-container {
   width: 76%;
   height: 100%;
   min-width: 240px;
 
-}
-
-.survey-intro__body-text {
-  text-align: center;
 }
 
 .category-list__container {
@@ -58,7 +49,7 @@
 }
 
 .survey-intro__category-list__item p {
-  font-family: ;
+  /* font-family: ; */
 }
 
 .buttons {
@@ -82,15 +73,15 @@
 }
 
 div.fadeIn p, h2 {
-  animation: 2.4s fadeIn;
+  animation: 0.8s fadeIn;
 }
 
 div.fadeIn {
-  animation: 2.8s fadeIn;
+  animation: 1.2s fadeIn;
 }
 
 div.fadeIn a {
-  animation: 4s fadeIn;
+  animation: 2s fadeIn;
 }
 
 .buttons button:hover {
