--- a/src/pages/form/FormStart.css
+++ b/src/pages/form/FormStart.css
@@ -21,7 +21,6 @@
   width: 76%;
   height: 100%;
   min-width: 240px;
-
 }
 
 .category-list__container {
@@ -32,26 +31,6 @@
   margin: 8% 0 4% 0;
 }
 
-.survey-intro__category-list__item {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  margin: 0 auto;
-  font-size: 16px;
-  width: 180px;
-  height: 180px;
-}
-.survey-intro__category-list__item img {
-  min-width: 20px;
-  max-width: 80px;
-}
-
-.survey-intro__category-list__item p {
-  /* font-family: ; */
-}
-
 .buttons {
   display: flex;
   flex-direction: row;
@@ -60,19 +39,24 @@
 }
 
 @media (max-width: 460px) {
-    .buttons {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
+  .buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 @keyframes fadeIn {
-  0% {opacity: 0;}
-  100% {opacity: 1;}
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
-div.fadeIn p, h2 {
+div.fadeIn p,
+h2 {
   animation: 0.8s fadeIn;
 }
 
