--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -3,80 +3,76 @@
   height: 80px;
   width: 100%;
   display: flex;
+  justify-content: space-between;
   align-items: center;
+  font-weight: 500;
 }
 
 .nav-logo {
   width: 100px;
+  margin-left: 24px;
 }
 
 .nav-logo-container {
-  width: 100%;
   height: 80px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: 10;
 }
 
 .nav-list {
   display: flex;
   margin-left: auto;
   list-style-type: none;
+  margin-right: 12px;
 }
 
 .nav-list a {
-  margin-right: 20px;
+  margin-right: 32px;
 }
 
 .nav-list a {
   text-decoration: none;
 }
 
-.hamburger {
+.nav-list-mobile {
+  width: 100%;
+  height: 400px;
+  padding-top: 38px;
+  position: fixed;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+  list-style-type: none;
+  background-color: antiquewhite;
+}
+
+.nav-list-mobile li {
+  margin-bottom: 20px;
+}
+
+.nav-list-mobile a {
+  text-decoration: none;
+}
+
+.hamburger-button {
   width: 50px;
-  height: 50px;
-  background-color: aqua;
-  display: none;
+  color: white;
+  border-style: none;
+  font-size: 20px;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-color: transparent;
+  z-index: 9;
 }
 
-.closed {
-  display: none;
-}
 
-@media (max-width: 800px) {
-  .navigation-container {
-    flex-direction: column;
-    width: 100%;
-    height: auto;
-    background-color: antiquewhite;
+/* @media (max-width: 800px) {
 
-  }
-
-  .nav-list {
-    display: none;
-  }
-
-  .nav-list li {
-    margin-bottom: 12px;
-  }
-
-  .nav-list a {
-    margin-right: 0;
-  }
-  .closed {
-    display: none;
-  }
-
-  .open {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 30px;
-  }
-
-  .hamburger {
-    display: block;
-    margin-right: 20px;
-  }
-}
+} */
