--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -82,6 +82,6 @@
   width: 100%;
   height: 2px;
   border-radius: 15px;
-  background: var(--dark-blue);
+  background-color: var(--dark-blue);
   opacity: 1;
 }
