--- a/src/index.css
+++ b/src/index.css
@@ -68,8 +68,7 @@ body {
 
 :root {
   --dark-pink: #ee826c;
-  --light-pink: #FCE3CF;
-  --dark-blue: #302B70;
-  --light-blue: #EDF1F9;
-
+  --light-pink: #fce3cf;
+  --dark-blue: #302b70;
+  --light-blue: #edf1f9;
 }
