--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -1,3 +1,16 @@
+.navigation-container a,
+.navigation-container a:hover,
+.navigation-container a:focus,
+.navigation-container a:active {
+  text-decoration: none;
+  color: #302b70;
+  opacity: 0.7;
+}
+
+.navigation-container a:hover {
+  opacity: 1;
+}
+
 .navigation-container {
   position: fixed;
   height: 80px;
@@ -5,7 +18,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  font-family: "Work Sans", sans-serif;
   font-weight: 500;
+  font-size: 1em;
+  background-color: var(--light-pink);
 }
 
 .nav-logo {
@@ -19,6 +35,10 @@
   justify-content: space-between;
   align-items: center;
   z-index: 10;
+}
+
+.nav-logo-container a {
+  opacity: 1;
 }
 
 .nav-list {
@@ -58,6 +78,18 @@
   margin-bottom: 20px;
 }
 
+.nav-list-mobile li:hover::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  border-radius: 15px;
+  background-color: var(--dark-blue);
+  opacity: 1;
+}
+
 .nav-list-mobile a {
   text-decoration: none;
 }
@@ -85,3 +117,14 @@
   background-color: var(--dark-blue);
   opacity: 1;
 }
+
+/* span {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  border-radius: 15px;
+  background-color: var(--dark-blue);
+  opacity: 1;
+} */
