--- a/src/pages/form/FormStart.css
+++ b/src/pages/form/FormStart.css
@@ -1,3 +1,7 @@
+.container {
+  padding-top: 100px;
+}
+
 .survey-intro__container {
   margin: 4% 8% 0% 8%;
   display: flex;
@@ -48,9 +52,9 @@
 }
 
 @media (max-width: 460px) {
-    .buttons {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
+  .buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
