--- a/src/pages/companies/company.css
+++ b/src/pages/companies/company.css
@@ -1,3 +1,28 @@
-.companies-div{
-  padding-top: 100px;
+.temp-div {
+  width: 100%;
+  height: calc(100vh);
+  padding-top: 200px;
+  display: flex;
+  justify-content: center;
+  background-color: var(--light-pink);
+  color: var(--dark-blue);
+  margin: auto;
+}
+
+.temp-button {
+  position: absolute;
+  top: 300px;
+  width: 190px;
+  color: white;
+  border-style: none;
+  font-family: "Work Sans", sans-serif;
+  font-size: 1.2rem;
+  font-weight: 400;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 8px;
+  cursor: pointer;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
