--- a/src/pages/form/FormStart.css
+++ b/src/pages/form/FormStart.css
@@ -1,60 +1,32 @@
-.container {
-  padding-top: 100px;
-}
-
-.survey-intro__container {
-  margin: 4% 8% 0% 8%;
+.temp-div {
+  width: 100%;
+  height: calc(100vh);
+  padding-top: 200px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #fdfbf9;
-  padding-right: 12px;
-  padding-left: 12px;
-  padding-top: 36px;
-  padding-bottom: 36px;
-  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+  justify-content: center;
+  background-color: var(--light-pink);
+  color: var(--dark-blue);
+  margin: auto;
 }
 
-.survey-intro__title {
-  margin-bottom: 28px;
+.temp-div h2 {
+  font-size: 2.2rem;
 }
 
-.survey-intro__body-container {
-  width: 76%;
-  min-width: 240px;
-}
-
-.survey-intro__body-text {
-  text-align: justify;
-}
-
-.survey-intro__category-list {
-  list-style-type: none;
-  padding: 0;
-  margin: 0 0 4% 0;
-}
-
-.survey-intro__category-list__item {
-  background-image: url("../../assets/li-icon.png");
-  background-repeat: no-repeat;
-  background-position: 1px;
-  padding-left: 20px;
-  background-size: 15px;
-  font-size: 20px;
-  margin-left: 16px;
-}
-
-.buttons {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 12%;
-}
-
-@media (max-width: 460px) {
-  .buttons {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+.temp-button {
+  position: absolute;
+  top: 300px;
+  width: 190px;
+  color: white;
+  border-style: none;
+  font-family: "Work Sans", sans-serif;
+  font-size: 1.2rem;
+  font-weight: 400;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 8px;
+  cursor: pointer;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
