--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ body {
 
 body {
   line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
+  /* -webkit-font-smoothing: antialiased; */
 }
 
 img,
