--- a/src/pages/companies/company.css
+++ b/src/pages/companies/company.css
@@ -3,15 +3,22 @@
   height: calc(100vh);
   padding-top: 200px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+align-items: center;
+  /* justify-content: center; */
   background-color: var(--light-pink);
   color: var(--dark-blue);
   margin: auto;
 }
 
+.temp-div h2 {
+  font-size: 2.2rem;
+  margin-bottom: 40px;
+}
+
 .temp-button {
-  position: absolute;
-  top: 300px;
+  /* position: absolute;
+  top: 300px; */
   width: 190px;
   color: white;
   border-style: none;
