--- a/src/pages/form/FormStart.css
+++ b/src/pages/form/FormStart.css
@@ -3,7 +3,9 @@
   height: calc(100vh);
   padding-top: 200px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
   background-color: var(--light-pink);
   color: var(--dark-blue);
   margin: auto;
@@ -11,11 +13,12 @@
 
 .temp-div h2 {
   font-size: 2.2rem;
+  margin-bottom: 40px;
 }
 
 .temp-button {
-  position: absolute;
-  top: 300px;
+  /* position: absolute;
+  top: 300px; */
   width: 190px;
   color: white;
   border-style: none;
