--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -12,7 +12,7 @@
   padding-inline: 48px;
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   text-align: center;
 }
