--- a/src/pages/congratulate/Congratulate.css
+++ b/src/pages/congratulate/Congratulate.css
@@ -4,6 +4,7 @@
   align-items: center;
   /* justify-content: center; */
   background-color: #fce3cf;
+  padding-top: 20%;
   margin: 40px;
 }
 
@@ -20,6 +21,13 @@
 }
 
 .boxed {
-  font-size: 16px;
+  display: flex;
+  flex-direction: column;
   width: 40%;
+  height: 10%;
+}
+
+.par {
+  font-size: 16px;
+  margin-bottom: 40px;
 }
