--- a/src/pages/form/Form.css
+++ b/src/pages/form/Form.css
@@ -35,3 +35,27 @@ body {
   padding: 10px;
   font-size: 16px;
 }
+
+.searchHead {
+  color: #302b70;
+}
+
+.company {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.search {
+  display: flex;
+  flex-direction: row;
+  margin-top: 40px;
+}
+
+.input {
+  margin: 10px;
+  border: 2px solid #302b70;
+  padding: 8px;
+  border-radius: 8px;
+  width: 80%;
+}
