--- a/src/pages/companies/company.css
+++ b/src/pages/companies/company.css
@@ -46,6 +46,12 @@
   margin-top: 100px;
 }
 
-.badges-dropdown-container li{
+.badges-dropdown-list{
   list-style-type: none;
+}
+
+.company-list-container{
+  margin-left: 100px;
+  list-style-type: none;
+
 }
