--- a/src/pages/companies/company-home.css
+++ b/src/pages/companies/company-home.css
@@ -13,10 +13,7 @@
 }
 
 .company-search-container {
-  /* grid-column: span 12; */
-  /* width: 100%; */
-  height: 100px;
-  /* background-color: #D0D0D0; */
+  margin-bottom: 48px;
 }
 
 .company-filter-and-list-container {
@@ -29,15 +26,16 @@
 .filters-container {
   grid-column: span 3;
 }
-.company-filter-container {
-  /* width: 400px; */
+
+.filterlist-container {
   margin-bottom: 40px;
 }
 
-.badges-dropdown-container {
+.filterlist-title {
+  margin-bottom: 10px;
 }
 
-.badges-dropdown-list {
+.filterlist{
   list-style-type: none;
 }
 
@@ -47,10 +45,10 @@
 }
 
 .badges-container {
-  position: absolute;
-  top: -50px;
-  left: 0;
+  margin-top: 24px;
+
   display: flex;
+  flex-wrap: wrap;
 }
 
 .filter-badge {
@@ -67,7 +65,7 @@
 }
 
 label {
-  display:flex;
+  display: flex;
   font-size: 0.9rem;
   line-height: 1;
   /* height: 20px; */
@@ -75,11 +73,6 @@ label {
   margin-bottom: 10px;
 }
 
-
-input[type='checkbox']{
+input[type="checkbox"] {
   margin-right: 10px;
-}
-
-h4{
-  margin-bottom: 10px;
 }
