--- a/src/pages/companies/company-home.css
+++ b/src/pages/companies/company-home.css
@@ -76,3 +76,9 @@ label {
 input[type="checkbox"] {
   margin-right: 10px;
 }
+
+.test{
+  width: 100px;
+  height: 100px;
+  background-color: aqua;
+}
