--- a/src/pages/companies/company-home.css
+++ b/src/pages/companies/company-home.css
@@ -4,6 +4,14 @@
   overflow: scroll;
 }
 
+.company-header-container {
+  margin-bottom: 76px;
+}
+
+.company-header-title {
+  color: var(--dark-pink);
+}
+
 .company-content-container {
   max-width: 1200px;
   height: 100vh;
@@ -24,7 +32,7 @@
 }
 
 .filters-container {
-  grid-column: span 3;
+  grid-column: span 4;
 }
 
 .filterlist-container {
@@ -33,14 +41,15 @@
 
 .filterlist-title {
   margin-bottom: 10px;
+  color: var(--dark-pink)
 }
 
-.filterlist{
+.filterlist {
   list-style-type: none;
 }
 
 .company-list-container {
-  grid-column: span 9;
+  grid-column: span 8;
   list-style-type: none;
 }
 
@@ -77,8 +86,49 @@ input[type="checkbox"] {
   margin-right: 10px;
 }
 
-.test{
+.test {
   width: 100px;
   height: 100px;
   background-color: aqua;
+}
+
+.company-list-item a,
+.company-list-item a:hover,
+.company-list-item a:focus,
+.company-list-item a:active {
+  text-decoration: none;
+  display: inline-block;
+  background-color: white;
+  height: 100px;
+  width: 100%;
+  margin-bottom: 20px;
+  border-radius: 8px;
+  padding: 12px;
+}
+
+.search-input {
+  width: 100%;
+  height: 40px;
+  border: none;
+  padding: 4px;
+}
+
+@media (max-width: 800px) {
+  .company-content-container {
+    padding-inline: 24px;
+  }
+
+  .company-filter-and-list-container {
+    /* position: relative;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr); */
+    gap: 12px;
+  }
+
+  .filters-container {
+    grid-column: span 12;
+  }
+  .company-list-container {
+    grid-column: span 12;
+  }
 }
