--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,5 +1,5 @@
 .header-container {
-  background-color: var(--light-pink);
+  /* background-color: var(--light-pink); */
   height: 100vh;
   overflow: scroll;
 }
