--- a/src/pages/companies/company-home.css
+++ b/src/pages/companies/company-home.css
@@ -1,6 +1,10 @@
 .line {
   border: 1px solid var(--light-blue);
-  margin-bottom: 20px;
+}
+
+.filter-line {
+  border: 1px solid var(--light-blue);
+  margin-bottom: 24px;
 }
 
 .company-container {
@@ -18,7 +22,7 @@
 }
 
 .company-content-container {
-  max-width: 1200px;
+  max-width: 1400px;
   /* height: 100vh; */
   margin: 0 auto;
   padding-top: 120px;
@@ -47,6 +51,7 @@
   padding: 16px;
 }
 
+
 .filterlist-container {
   margin-bottom: 40px;
 }
@@ -68,16 +73,33 @@
   width: 70%;
   list-style-type: none;
   margin-bottom: 40px;
-  background-color: hsl(220, 50%, 98%);
+  background-color: hsl(220, 50%, 97%);
   padding: 20px;
 }
 
 .company-list-title {
+  font-size: 1.1rem;
+  font-weight: 600;
   color: var(--dark-blue);
+  margin-bottom: 6px;
+}
+
+.company-list-location {
+  font-size: 1rem;
+
+  color: black;
+  margin-top: 20px;
+}
+
+.company-list-website {
+  color: var(--dark-blue);
+  margin-top: 8px;
 }
 
 .companies-found {
+  color: var(--dark-blue);
   margin-bottom: 24px;
+  font-size: 1rem;
 }
 
 .badges-container {
@@ -112,12 +134,6 @@ input[type="checkbox"] {
   margin-right: 10px;
 }
 
-.test {
-  width: 100px;
-  height: 100px;
-  background-color: aqua;
-}
-
 .company-list-item a,
 .company-list-item a:hover,
 .company-list-item a:focus,
@@ -125,14 +141,20 @@ input[type="checkbox"] {
   text-decoration: none;
   display: inline-block;
   background-color: white;
-  height: 100px;
+  height: fit-content;
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 24px;
   border-radius: 8px;
-  padding: 12px;
+  padding: 20px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
     rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
+
+.company-list-item a:hover{
+  background-color:  hsl(220, 50%, 99%);
+  ;
+}
+
 
 .search-input {
   width: 100%;
