--- a/src/pages/login/LogIn.css
+++ b/src/pages/login/LogIn.css
@@ -1,12 +1,42 @@
 .login {
-  padding-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
+  padding-top: 120px;
+  color: hsl(10, 79%, 58%);
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .warning {
-  color: rgb(241, 30, 30);
+  color: #fb5e3e;
+}
+
+.user-input {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+  padding: 8px;
+  border-style: none;
+  border: #302b70 solid 2px;
+  border-radius: 12px;
+}
+
+.error {
+  text-align: center;
+  color: #fb5e3e;
 }
 
 .field {
   display: flex;
   flex-direction: column;
+}
+.btn {
+  margin: 40px;
 }
