--- a/src/pages/signup/SignUp.css
+++ b/src/pages/signup/SignUp.css
@@ -2,19 +2,28 @@
   padding-top: 120px;
 }
 
-.signup {
-  padding-top: 120px;
-}
-
-.input {
+.sign-up {
+  padding-top: 100px;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.option {
-  background-color: antiquewhite;
-  color: aqua;
+.envelope {
+  text-align: center;
 }
+
+.head-up {
+  color: hsl(10, 79%, 58%);
+  padding: 40px;
+}
+
+.sub-up {
+  padding: 20px;
+  color: #302b70;
+}
+
 .warning {
-  color: rgb(241, 30, 30);
+  color: #fb5e3e;
 }
