--- a/src/pages/signup/SignUp.css
+++ b/src/pages/signup/SignUp.css
@@ -4,6 +4,7 @@
 
 .sign-up {
   padding-top: 100px;
+  padding-bottom: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,15 +16,81 @@
 }
 
 .head-up {
+  font-size: 140%;
   color: hsl(10, 79%, 58%);
   padding: 40px;
 }
 
 .sub-up {
+  font-size: 120%;
   padding: 20px;
   color: #302b70;
 }
 
+.input-up {
+  display: flex;
+  flex-direction: column;
+}
+
 .warning {
-  color: #fb5e3e;
+  font-size: 120%;
+  color: #fb4f2d;
+}
+
+.field-up {
+  margin: 10px;
+  padding: 8px;
+  border-style: none;
+  border: #302b70 solid 2px;
+  border-radius: 12px;
+}
+
+.drop-up {
+  appearance: none;
+  color: #6f6d8a;
+  margin: 10px;
+  padding: 8px;
+  border-style: none;
+  border: #302b70 solid 2px;
+  border-radius: 12px;
+}
+
+.check-section {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-left: 40px;
+  padding-top: 20px;
+}
+
+.p-up {
+  font-weight: 500;
+  margin-left: 40px;
+  color: #302b70;
+}
+/*
+.check-up[type="radio"] {
+  outline: none;
+  padding: 6px;
+  border: #302b70 solid 2px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.check-up[type="radio"] :checked {
+  appearance: initial;
+  border: #04f540 solid 2px;
+}
+*/
+.dark-blue-up {
+  align-self: center;
+  width: 190px;
+  color: white;
+  border-style: none;
+  font-size: 20px;
+  margin: 40px;
+  padding: 10px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-color: var(--dark-blue);
 }
