--- a/src/pages/signup/SignUp.css
+++ b/src/pages/signup/SignUp.css
@@ -4,7 +4,7 @@
 
 .sign-up {
   padding-top: 100px;
-  padding-bottom: 40px;
+  padding-bottom: 80px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,7 +21,13 @@
   padding: 40px;
 }
 
-.sub-up {
+.sub-up-1 {
+  font-size: 120%;
+  padding-top: 14px;
+  color: #302b70;
+}
+
+.sub-up-2 {
   font-size: 120%;
   padding: 20px;
   color: #302b70;
@@ -68,20 +74,54 @@
   margin-left: 40px;
   color: #302b70;
 }
-/*
-.check-up[type="radio"] {
-  outline: none;
-  padding: 6px;
+
+.check-up {
+  margin-bottom: 2px;
+  width: 16px;
+  height: 16px;
   border: #302b70 solid 2px;
   border-radius: 50%;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.check-up[type="radio"] :checked {
-  appearance: initial;
-  border: #04f540 solid 2px;
+.check-up input {
+  display: none;
+}
+
+.check-up .circle {
+  width: calc(60%);
+  height: calc(60%);
+  background-color: hsl(10, 79%, 58%);
+  border-radius: 50%;
+  display: inline-block;
+  opacity: 0;
+  transition: opacity 0.6s ease;
+}
+
+.check-up input:checked + .circle {
+  opacity: 1;
+}
+
+/*
+input[type="radio"] {
+  opacity: 0;
+  outline: none;
+  padding: 6px;
+  width: 9px;
+  height: 9px;
+  border: #302b70 solid 2px;
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 7;
+}
+input[type="radio"] .circle:before {
+  background: #fb4f2d;
 }
 */
+
 .dark-blue-up {
   align-self: center;
   width: 190px;
