--- a/src/pages/about-badges/AboutBadges.css
+++ b/src/pages/about-badges/AboutBadges.css
@@ -11,12 +11,22 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  padding-top: 12%;
+  padding-top: 160px;
   padding-bottom: 4%;
 }
 
+.about-badges__container p {
+  font-family: "Work Sans", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 300;
+}
+
 .about-badges__title-container {
-  margin-top: 80px;
+  font-size: 2.4rem;
+  font-weight: 700;
+  line-height: 1.3;
+  color: var(--dark-blue);
+  font-family: "Mulish", sans-serif;
 }
 
 .about-badges__text-container {
@@ -46,6 +56,11 @@
 .badge-title {
   text-align: center;
   padding-top: 80px;
+  font-size: 2.4rem;
+  font-weight: 700;
+  line-height: 1.3;
+  color: var(--dark-blue);
+  font-family: "Mulish", sans-serif;
 }
 
 .badge-container {
@@ -57,6 +72,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: "Work Sans", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 300;
 }
 
 .badge__text-container p {
@@ -66,7 +84,7 @@
 
 .badge__img-container {
   width: 32%;
-	min-width: 320px;
+  min-width: 320px;
 }
 
 /* Badge 1 */
@@ -75,7 +93,19 @@
   display: flex;
   flex-direction: center;
   flex-wrap: wrap;
-	margin-top: 20px;
+  margin-top: 20px;
+}
+
+@media (max-width: 900px) {
+  .content1-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+  }
+  .badge__text-container {
+    width: 92%;
+  }
 }
 
 /* Badge 2 */
@@ -84,7 +114,19 @@
   display: flex;
   flex-direction: row-reverse;
   flex-wrap: wrap;
-	margin-top: 20px;
+  margin-top: 20px;
+}
+
+@media (max-width: 900px) {
+  .content2-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+  }
+  .badge__text-container {
+    width: 92%;
+  }
 }
 
 /* Badge 3 */
@@ -93,7 +135,19 @@
   display: flex;
   flex-direction: center;
   flex-wrap: wrap;
-	margin-top: 20px;
+  margin-top: 20px;
+}
+
+@media (max-width: 900px) {
+  .content3-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+  }
+  .badge__text-container {
+    width: 92%;
+  }
 }
 
 /* Badge 4 */
@@ -102,5 +156,17 @@
   display: flex;
   flex-direction: row-reverse;
   flex-wrap: wrap;
-	margin-top: 20px;
+  margin-top: 20px;
+}
+
+@media (max-width: 900px) {
+  .content4-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+  }
+  .badge__text-container {
+    width: 92%;
+  }
 }
