--- a/src/pages/form/FormStart.css
+++ b/src/pages/form/FormStart.css
@@ -16,9 +16,21 @@
   height: 100vh;
 }
 
+.survey-intro__title {
+  font-size: 2.4rem;
+  font-weight: 700;
+  line-height: 1.3;
+  color: var(--dark-blue);
+  font-family: "Mulish", sans-serif;
+  text-align: center;
+}
+
 .survey-intro__body-container {
   width: 76%;
   min-width: 240px;
+  font-family: "Work Sans", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 300;
 }
 
 .category-list__container {
@@ -27,6 +39,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
   margin: 4% 0 0% 0;
+  margin-bottom: 80px;
 }
 
 .buttons {
