--- a/src/pages/form/badge/Badge.css
+++ b/src/pages/form/badge/Badge.css
@@ -5,9 +5,11 @@
   align-items: center;
   text-align: center;
   margin: 0 auto;
-  font-size: 16px;
   width: 180px;
   height: 180px;
+  font-family: "Work Sans", sans-serif;
+  font-size: 1.2rem;
+  font-weight: 300;
 }
 .survey-intro__category-list__item img {
   min-width: 20px;
