--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -55,13 +55,14 @@ h1 {
 }
 
 .home-button {
-  width: 190px;
+  width: 260px;
+  height: 54px;
   color: white;
   border-style: none;
   font-family: "Work Sans", sans-serif;
   font-size: 1.2rem;
   font-weight: 400;
-  margin: 10px;
+  margin: 10px 18px 10px 18px;
   padding: 10px;
   border-radius: 8px;
   cursor: pointer;
