--- a/src/pages/about-badges/AboutBadges.css
+++ b/src/pages/about-badges/AboutBadges.css
@@ -17,14 +17,17 @@
 
 .about-badges__container p {
   font-family: "Work Sans", sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: 300;
 }
 
 .about-badges__title-container {
+  line-height: 1.3;
+}
+
+.about-badges__title {
   font-size: 2.4rem;
   font-weight: 700;
-  line-height: 1.3;
   color: var(--dark-blue);
   font-family: "Mulish", sans-serif;
 }
@@ -73,7 +76,7 @@
   justify-content: center;
   align-items: center;
   font-family: "Work Sans", sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: 300;
 }
 
