--- a/src/pages/companies/company-detail/CompanyDetail.css
+++ b/src/pages/companies/company-detail/CompanyDetail.css
@@ -54,6 +54,21 @@
     rgb(0 0 0 / 6%) 0px 2px 4px -1px;
 }
 
+.company-badges p {
+  font-family: "Work Sans", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 300;
+}
+
+.company-badges h2 {
+  margin-bottom: 24px;
+  font-size: 2.4rem;
+  font-weight: 700;
+  line-height: 1.3;
+  color: var(--dark-blue);
+  font-family: "Mulish", sans-serif;
+}
+
 .company-badges__container {
   display: flex;
   flex-direction: row;
