--- a/src/pages/login/LogIn.css
+++ b/src/pages/login/LogIn.css
@@ -2,41 +2,99 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
-  padding-top: 120px;
-  color: hsl(10, 79%, 58%);
+  /* justify-content: center;  */
+ 
+  padding-top: 10rem;
+  color: hsl(60, 9%, 2%);
+}
+.warning{
+  margin: 0 0;
 }
 
-.form {
+
+/* Hans */
+.loginForm {
+  width: 40rem;
+  height: 30rem;
+  margin: 3rem auto;
+  background-color: rgb(221, 210, 210);
+  padding: 1rem;
+  border-radius: 6px;
+
+  box-sizing: border-box;
+}
+
+p{
+  padding-left: 7rem;
+}
+h1{
+  margin: 0 0;
+  color: rgb(16, 13, 13);
+  font-size: 2rem;
+}
+.field{
+  height: 3rem;
+  border-radius: 4px;
+}
+
+h2{
+margin:2px 2px;
+
+}
+ul{
+
+list-style: none;
+margin: 0;
+padding: 0;
+}
+
+
+label {
+  margin-bottom: 0.5rem;
+  display: block;
+}
+textarea {
+  resize: none;
+}
+
+.logo{
+  width: 20%;
+  margin: 0 auto;
+}
+p{
+ margin-left: 7rem;
+}
+
+.error{
+  font-size: 0.7rem;
+  color:red;
+}
+.textField{
+  color: rgb(61, 58, 58);
+  width: 100%;
+  margin-bottom: .5rem;
+  display: block;
+  box-sizing: border-box;
+  font: inherit;
+  border: 1px solid rgb(184, 184, 184);
+  padding: 0.25rem;
+}
+input:focus,
+textarea:focus {
+  background-color: rgb(219, 190, 253);
+  color: rgb(73, 7, 148);
+  border-color: rgb(219, 190,253);
+}
+
+.error{
+  margin-left:2rem;
+}
+
+.controler-inline{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
-.warning {
-  color: #fb5e3e;
-}
-
-.user-input {
-  display: flex;
-  flex-direction: column;
-  margin: 10px;
-  padding: 8px;
-  border-style: none;
-  border: #302b70 solid 2px;
-  border-radius: 12px;
-}
-
-.error {
-  text-align: center;
-  color: #fb5e3e;
-}
-
-.field {
-  display: flex;
-  flex-direction: column;
-}
-.btn {
-  margin-top: 40px;
+.controler-inline input{
+  width: auto;
+  margin-right: 0.5rem;
 }
