--- a/src/pages/signup/SignUp.css
+++ b/src/pages/signup/SignUp.css
@@ -59,14 +59,11 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding-left: 40px;
   padding-top: 10px;
 }
 
 .p-up {
-  font-weight: 500;
   padding: 0 0;
-  color: #302b70;
   margin-left: 1rem;
 }
 
@@ -133,7 +130,7 @@ input[type="radio"] .circle:before {
 
 form {
   width: 30rem;
-  background-color: rgb(221, 210, 210);
+  background-color:  hsl(225, 32%, 93%);
   padding: 1rem;
   border-radius: 6px;
 }
@@ -202,31 +199,5 @@ textarea:focus {
 }
 .star{
   color: red;
-}
-
-/* button {
-  display: block;
-  font: inherit;
-  background-color: rgb(73, 7, 148);
-  color: white;
-  border: 1px solid rgb(73, 7, 148);
-  padding: 0.5rem 1.5rem;
-  border-radius:4px;
-  cursor: pointer;
-
-}
-button:hover{
-  background-color: rgb(108, 35, 192);
-  border-color: rgb(112, 64, 167);
-} */
-
-
-.controler-inline{
-  display: flex;
-}
-
-.controler-inline input{
-  width: auto;
-  margin-right: 0.5rem;
 }
 
