--- a/src/pages/about-us/AboutUs.css
+++ b/src/pages/about-us/AboutUs.css
@@ -15,7 +15,7 @@
 
 .about-us__main-container p {
   font-family: "Work Sans", sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: 300;
 }
 
@@ -36,7 +36,10 @@
 
 .about-us__body-text {
   text-align: justify;
-  margin-top: 8%;
+  margin-top: 4%;
+  font-family: "Work Sans", sans-serif;
+  font-size: 1.2rem;
+  font-weight: 300;
 }
 
 .about-us__body-text__container {
@@ -51,7 +54,7 @@
   margin-top: 40px;
   background-color: var(--light-blue);
   padding: 12px 24px 24px 24px;
-  gap: 32px;
+  gap: 44px;
   width: 100%;
 }
 
@@ -65,10 +68,10 @@
   align-items: center;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
     rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
-    margin: 8px;
-    background-color: rgba(255, 255, 255);
-    gap: 8px;
-    margin-top: -32px;
+  margin: 8px;
+  background-color: rgba(255, 255, 255);
+  gap: 8px;
+  margin-top: -32px;
 }
 
 .about-us__card-picture__container {
