--- a/src/pages/login/LogIn.css
+++ b/src/pages/login/LogIn.css
@@ -3,51 +3,47 @@
   flex-direction: column;
   align-items: center;
   /* justify-content: center;  */
- 
+
   padding-top: 7.2rem;
   color: hsl(60, 9%, 2%);
 }
-.warning{
+.warning {
   margin: 0 0;
 }
-
 
 /* Hans */
 .loginForm {
   width: 40rem;
   height: 28rem;
   margin: 0 auto;
-  background-color:  hsl(225, 32%, 93%);
+  background-color: hsl(225, 32%, 93%);
   padding: 1rem;
   border-radius: 6px;
 
   box-sizing: border-box;
 }
 
-p{
+p {
   padding-left: 7rem;
 }
-h1{
+h1 {
   margin: 0 0;
   color: rgb(16, 13, 13);
   font-size: 2rem;
 }
-.field{
+.field {
   height: 3rem;
   border-radius: 4px;
 }
 
-h2{
-margin:2px 2px;
-
+h2 {
+  margin: 2px 2px;
 }
-ul{
-
-list-style: none;
-margin: 0;
-padding: 0;
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
-
 
 label {
   margin-bottom: 0.5rem;
@@ -57,23 +53,23 @@ textarea {
   resize: none;
 }
 
-.logo{
+.logo {
   width: 20%;
   margin: 0 auto;
 }
-p{
- margin-left: 7rem;
+p {
+  margin-left: 7rem;
 }
 
-.error{
+.error {
   font-size: 0.7rem;
-  color:red;
+  color: red;
 }
 
-.textField{
+.textField {
   color: rgb(61, 58, 58);
   width: 100%;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
   display: block;
   box-sizing: border-box;
   font: inherit;
@@ -84,11 +80,11 @@ input:focus,
 textarea:focus {
   background-color: rgb(219, 190, 253);
   color: rgb(73, 7, 148);
-  border-color: rgb(219, 190,253);
+  border-color: rgb(219, 190, 253);
 }
 
-.error{
-  margin-left:2rem;
+.error {
+  margin-left: 2rem;
 }
 
 @media screen and (max-width: 600px) {
@@ -96,29 +92,25 @@ textarea:focus {
     width: 27rem;
     height: 23rem;
     margin: 0 auto;
-    background-color:  hsl(225, 32%, 93%);
+    background-color: hsl(225, 32%, 93%);
     padding: 1rem;
     border-radius: 6px;
-  
-    
   }
-  p{
+  p {
     padding-left: 1rem;
   }
 
-  h1{
+  h1 {
     margin: 0 0;
     font-size: 1rem;
   }
-  h2{
-    margin:1px 1px;
-    
-    }
-    .field{
-      height: 2rem;
-      border-radius: 4px;
-    }
-
+  h2 {
+    margin: 1px 1px;
+  }
+  .field {
+    height: 2rem;
+    border-radius: 4px;
+  }
 }
 
 @media screen and (max-width: 360px) {
@@ -126,59 +118,52 @@ textarea:focus {
     width: 20rem;
     height: 23rem;
     margin: 0 auto;
-    background-color:  hsl(225, 32%, 93%);
+    background-color: hsl(225, 32%, 93%);
     padding: 1rem;
     border-radius: 6px;
-  
-    
   }
-  p{
-    margin:0 0;
+  p {
+    margin: 0 0;
     font-size: 12px;
     text-align: center;
   }
 
-  h1{
+  h1 {
     margin: 0 0;
     font-size: 1.5rem;
   }
-  h2{
-    margin:1px 1px;
-    
-    }
-    .field{
-      height: 2rem;
-      border-radius: 4px;
-    }
- 
+  h2 {
+    margin: 1px 1px;
+  }
+  .field {
+    height: 2rem;
+    border-radius: 4px;
+  }
 }
 @media screen and (max-width: 500px) {
   .loginForm {
     width: 27rem;
     height: 23rem;
     margin: 0 auto;
-    background-color:  hsl(225, 32%, 93%);
+    background-color: hsl(225, 32%, 93%);
     padding: 1rem;
     border-radius: 6px;
-  
-    
   }
-  p{
+  p {
     padding-left: 1rem;
   }
 
-  h1{
+  h1 {
     margin: 0 0;
     font-size: 1rem;
   }
-  h2{
-    margin:1px 1px;
-    
-    }
-    .field{
-      height: 2rem;
-      border-radius: 4px;
-    }
+  h2 {
+    margin: 1px 1px;
+  }
+  .field {
+    height: 2rem;
+    border-radius: 4px;
+  }
 }
 
 @media screen and (max-width: 375px) {
@@ -186,30 +171,25 @@ textarea:focus {
     width: 20rem;
     height: 23rem;
     margin: 0 auto;
-    background-color:  hsl(225, 32%, 93%);
+    background-color: hsl(225, 32%, 93%);
     padding: 1rem;
     border-radius: 6px;
-  
-    
   }
-  p{
-    margin:0 0;
+  p {
+    margin: 0 0;
     font-size: 12px;
     text-align: center;
   }
 
-  h1{
+  h1 {
     margin: 0 0;
     font-size: 1.5rem;
   }
-  h2{
-    margin:1px 1px;
-    
-    }
-    .field{
-      height: 2rem;
-      border-radius: 4px;
-    }
-
-
+  h2 {
+    margin: 1px 1px;
+  }
+  .field {
+    height: 2rem;
+    border-radius: 4px;
+  }
 }
