login css cleanup

--- a/src/pages/companies/company-detail/CompanyDetail.css
+++ b/src/pages/companies/company-detail/CompanyDetail.css
@@ -2,7 +2,7 @@
   height: 100%;
 }
 
-.company-container {
+.company-detail-container {
   padding-top: 100px;
   display: flex;
   flex-direction: column;
