--- a/src/pages/login/LogIn.css
+++ b/src/pages/login/LogIn.css
@@ -1,43 +1,74 @@
-.login {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  /* justify-content: center;  */
- 
-  padding-top: 7.2rem;
-  color: hsl(60, 9%, 2%);
-}
-.warning{
+.warning {
   margin: 0 0;
 }
 
+.login-submit-button {
+  margin: 0px;
+}
+
+.login-container {
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
+  padding-top: 180px;
+  /* margin: 0 auto;
+  width: fit-content; */
+}
 
 /* Hans */
-.loginForm {
-  width: 40rem;
-  height: 28rem;
+.loginForm-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 25rem;
   margin: 0 auto;
-  background-color:  hsl(225, 32%, 93%);
-  padding: 1rem;
+  background-color: var(--light-blue);
+  padding: 2.6rem;
   border-radius: 6px;
-
-  box-sizing: border-box;
 }
 
-p{
+.loginForm-container li {
+  list-style-type: none;
+}
+
+/* p{
   padding-left: 7rem;
-}
-h1{
+} */
+
+.login-title {
   margin: 0 0;
-  color: rgb(16, 13, 13);
+  color: var(--dark-blue);
+  text-align: center;
   font-size: 2rem;
 }
-.field{
-  height: 3rem;
-  border-radius: 4px;
+
+.login-subtitle {
+  text-align: center;
+  margin-bottom: 40px;
 }
 
-h2{
+.login-fields-container li {
+  margin-bottom: 24px;
+}
+
+.login-input-container {
+  width: 100%;
+}
+
+.login-field {
+  height: 3rem;
+  border-radius: 8px;
+  border: none;
+  padding: 4px;
+  width: 100%;
+}
+
+.login-button-container {
+  margin-top: 24px;
+}
+
+/* h2{
 margin:2px 2px;
 
 }
@@ -46,63 +77,57 @@ ul{
 list-style: none;
 margin: 0;
 padding: 0;
-}
+} */
 
-
-label {
+/* label {
   margin-bottom: 0.5rem;
   display: block;
 }
 textarea {
   resize: none;
-}
+} */
 
-.logo{
-  width: 20%;
+/* .logo {
+  width: 40%;
   margin: 0 auto;
-}
-p{
+} */
+/* p{
  margin-left: 7rem;
-}
+} */
 
-.error{
+.error {
   font-size: 0.7rem;
-  color:red;
+  color: red;
+  margin-top: 8px;
 }
 
-.textField{
+.textField {
   color: rgb(61, 58, 58);
-  width: 100%;
-  margin-bottom: .5rem;
+  /* width: 100%; */
+  margin-bottom: 0.5rem;
   display: block;
   box-sizing: border-box;
   font: inherit;
   border: 1px solid rgb(184, 184, 184);
   padding: 0.25rem;
 }
-input:focus,
+/* input:focus,
 textarea:focus {
   background-color: rgb(219, 190, 253);
   color: rgb(73, 7, 148);
   border-color: rgb(219, 190,253);
-}
-
-.error{
-  margin-left:2rem;
-}
+} */
 
 @media screen and (max-width: 600px) {
   .loginForm {
     width: 27rem;
     height: 23rem;
     margin: 0 auto;
-    background-color:  hsl(225, 32%, 93%);
+    background-color: hsl(225, 32%, 93%);
     padding: 1rem;
     border-radius: 6px;
-  
-    
   }
-  p{
+  /* p{
     padding-left: 1rem;
   }
 
@@ -117,99 +142,43 @@ textarea:focus {
     .field{
       height: 2rem;
       border-radius: 4px;
-    }
-
+    } */
 }
 
-@media screen and (max-width: 360px) {
-  .loginForm {
-    width: 20rem;
-    height: 23rem;
-    margin: 0 auto;
-    background-color:  hsl(225, 32%, 93%);
-    padding: 1rem;
-    border-radius: 6px;
-  
-    
-  }
-  p{
-    margin:0 0;
-    font-size: 12px;
-    text-align: center;
-  }
-
-  h1{
-    margin: 0 0;
-    font-size: 1.5rem;
-  }
-  h2{
-    margin:1px 1px;
-    
-    }
-    .field{
-      height: 2rem;
-      border-radius: 4px;
-    }
- 
-}
-@media screen and (max-width: 500px) {
-  .loginForm {
-    width: 27rem;
-    height: 23rem;
-    margin: 0 auto;
-    background-color:  hsl(225, 32%, 93%);
-    padding: 1rem;
-    border-radius: 6px;
-  
-    
-  }
-  p{
-    padding-left: 1rem;
-  }
-
-  h1{
-    margin: 0 0;
-    font-size: 1rem;
-  }
-  h2{
-    margin:1px 1px;
-    
-    }
-    .field{
-      height: 2rem;
-      border-radius: 4px;
-    }
+@media (max-width: 1324px) {
 }
 
-@media screen and (max-width: 375px) {
-  .loginForm {
-    width: 20rem;
-    height: 23rem;
-    margin: 0 auto;
-    background-color:  hsl(225, 32%, 93%);
-    padding: 1rem;
-    border-radius: 6px;
-  
-    
-  }
-  p{
-    margin:0 0;
-    font-size: 12px;
-    text-align: center;
-  }
-
-  h1{
-    margin: 0 0;
-    font-size: 1.5rem;
-  }
-  h2{
-    margin:1px 1px;
-    
-    }
-    .field{
-      height: 2rem;
-      border-radius: 4px;
-    }
-
-
+@media (max-width: 992px) {
 }
+
+@media (max-width: 768px) {
+}
+
+@media (max-width: 640px) {
+}
+
+@media (max-width: 576px) {
+  .loginForm-container {
+    width: 95%;
+    margin-inline: auto;
+    padding-inline: 24px;
+  }
+
+  .login-title {
+    width: 100%;
+  }
+
+  .login-button-container {
+    width: 100%;
+    display: flex;
+  }
+
+  .login-submit-button {
+    width: 100%;
+  }
+}
+
+/* mobile: 768,
+  tablet: 992,
+  laptop: 1324,
+  desktop: 2024, */
