sign-up css cleanup

--- a/src/pages/companies/company-home.css
+++ b/src/pages/companies/company-home.css
@@ -123,7 +123,7 @@
   font-size: 0.8rem;
 }
 
-label {
+.filterlist-container label {
   display: flex;
   font-size: 0.9rem;
   line-height: 1;
@@ -132,7 +132,7 @@ label {
   margin-bottom: 10px;
 }
 
-input[type="checkbox"] {
+.filterlist-container input[type="checkbox"] {
   margin-right: 10px;
 }
 
