scrollbar fix on chrome, sign-up css updates

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,7 +1,7 @@
 .header-container {
   /* background-color: var(--light-pink); */
   height: 100vh;
-  overflow: scroll;
+  /* overflow: scroll; */
 }
 
 .header-content {
